--- a/server/package.json
+++ b/server/package.json
@@ -15,8 +15,10 @@
   "type": "module",
   "description": "",
   "dependencies": {
+    "@ai-sdk/google": "^2.0.43",
     "@clack/prompts": "^0.11.0",
     "@prisma/client": "^6.19.0",
+    "ai": "^5.0.101",
     "better-auth": "^1.4.0",
     "boxen": "^8.0.1",
     "chalk": "^5.6.2",
@@ -25,6 +27,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "figlet": "^1.9.4",
+    "marked": "^15.0.12",
+    "marked-terminal": "^7.3.0",
     "nodemon": "^3.1.11",
     "open": "^11.0.0",
     "prisma": "^6.19.0",
